--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://192.168.116.128:3306/graduation
-    username: root
+    url: jdbc:mysql://panyusql.mysql.database.azure.com:3306/graduation
+    username: truman
     password: Fyh.mysql20000718
   mail:
     username: TrumanVon@126.com
@@ -11,8 +11,8 @@ spring:
     protocol: smtp
     port: 25
   redis:
-    host: 192.168.116.128
-    password: Fyh.redis20000718
+    host: panyu-cache.redis.cache.windows.net
+    password: UHPEGF9EuoR48WDD8b4VgPzEe4B12ybeVAzCaJYmWwk=
     database: 0
   mvc:
     static-path-pattern: /**
