--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,7 +17,8 @@ spring:
   mvc:
     static-path-pattern: /**
 
-
+server:
+  port: 8080
 mybatis:
   mapper-locations: classpath:mapper/*.xml
 logging:
